--- a/task4crud/src/assets/sass/style.scss
+++ b/task4crud/src/assets/sass/style.scss
@@ -1,4 +1,6 @@
-@import "./globals/reset";
+// @import 'node_modules/bootstrap/scss/bootstrap.scss';
+// @import 'node_modules/bootstrap-vue/src/index.scss';
+// @import "./globals/reset";
 
 app{
 background-color: cadetblue;
